Edited wiki page through web user interface.

--- a/wiki/LoginProcess.wiki
+++ b/wiki/LoginProcess.wiki
@@ -36,3 +36,5 @@ private function usersLoginHandler(e:ProducteevResultEvent):void
 	
 }
 }}}
+
+Once the token is setted in the service, you will be able to call any other methods.
