--- a/wiki/CallingMethods.wiki
+++ b/wiki/CallingMethods.wiki
@@ -18,16 +18,16 @@ ProducteevService expose each of these group through a property of the same name
 
 = Calling a method =
 
-  # First, you need to authenticate the user in order to call any other methods. See [ProcessLogin]
+  * First, you need to authenticate the user in order to call any other methods. See [ProcessLogin]
 
-  # Add an event listener and call the method you re interested in :
+  * Add an event listener and call the method you re interested in :
 
 {{{
 service.dashboards.addEventListener(ProducteevResultEvent.DASHBOARDS_CREATE, createHandler);
 service.dashboards.create('myNewDashboard');
 }}}
 
-  # Verify the result sent from the server
+  * Verify the result sent from the server
 
 {{{
 private function createHandler(event:ProducteevResultEvent):void
