Edited wiki page through web user interface.

--- a/wiki/LoginProcess.wiki
+++ b/wiki/LoginProcess.wiki
@@ -6,20 +6,20 @@ Most Producteev API methods require user to be logged in. All responses are rela
 
 = Details =
 
-# Initialize ProducteevService
+ * Initialize  ProducteevService
 
 {{{
 service = new ProducteevService("YOUR_API_KEY", "YOUR_SECRET_KEY");
 }}}
 
-# Call login method
+  * Call login method
 
 {{{
 service.users.addEventListener(ProducteevResultEvent.USERS_LOGIN, usersLoginHandler);
 service.users.login("yourLogin", "yourPassword");
 }}}
 
-# Add the token to the service
+  * Add the token to the service
 
 {{{
 private function usersLoginHandler(e:ProducteevResultEvent):void
